# Taller9_embebidos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: random_generator.h
lib/: CMakeLists.txt  random_generator.c
src/: main.c
